# marx_man_mvp

./: .gitignore  CMakeLists.txt  README.md  build.sh  dependencies.conf  main.cpp  main.out
.include/: broad_sword.h  game_layer.h  game_node.h  visualizer.h  walk.h
code/: Makefile  broad_sword.cpp  broad_sword.h  game_api.cpp  game_data_layer.cpp  game_data_layer.h  game_layer.cpp  game_layer.h  game_pos.cpp  mele_weapon.cpp  unit_movement.cpp  walk.cpp
include/: game_data_layer.h  game_layer.h  mele_weapon.h
notes/: 2024.01.24_requirements_update  2024.01.24_segmented_structure  2024.01.25_avoiding_work_again  2024.01.26_holy_cow  2024.01.28_update_game_layer  2024.10.26_movement
src/: CMakeLists.txt  Makefile  broad_sword.cpp  broad_sword.h  main.cpp  rectangle.cpp  red_rectangle.cpp  red_rectangle.h  walk.h
src/.include/: unit_movement.h
src/game_layer_module/: Makefile  game_node.h  mele_weapon.h
src/graphics_module/: visual_shape.cpp
src/include/: broad_sword.h  rectangle.h  red_rectangle.h
src/unit_module/: CMakeLists.txt  broad_sword.cpp  unit.cpp
src/unit_module/game_layer_module/: CMakeLists.txt  description  game_layer.cpp  game_node.cpp  game_pos.cpp  mele_weapon.cpp  unit_movement.cpp
src/unit_module/game_layer_module/include/: game_layer.h  mele_weapon.h  unit_movement.h
src/unit_module/graphics_module/: CMakeLists.txt  frame_manager.cpp  visualizer.cpp
src/unit_module/graphics_module/include/: frame_manager.h  sprite.h  visualizer.h
src/unit_module/include/: broad_sword.h  red_rectangle.h  unit.h  walk.h
(+7 files in other folders)
